Updates notes up to 3.7

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,8 @@ nav:
   - Understanding DSP Chapter 01 exercises: udsp01ex.md
   - Understanding DSP Chapter 02: udsp02.md
   - Understanding DSP Chapter 02 exercises: udsp02ex.md
+  - Understanding DSP Chapter 03: udsp03.md
+  - Understanding DSP Chapter 03 exercises: udsp03ex.md
 
 extra_javascript: 
     - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_HTMLorMML
